// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test one 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "height": 50,
        "marginTop": 10,
        "paddingLeft": "5%",
        "width": "95%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        height={50}
        source={
          Object {
            "testUri": "../../../assets/img/default-avatar.png",
          }
        }
        style={
          Object {
            "borderRadius": 25,
            "height": 50,
            "width": 50,
          }
        }
        width={50}
      />
      <View
        style={
          Object {
            "alignContent": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": 20,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 18,
              "width": "100%",
            }
          }
        >
          name
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test two 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "height": 50,
        "marginTop": 10,
        "paddingLeft": "5%",
        "width": "95%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/dot.png",
          }
        }
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 25,
            "borderWidth": 0.8,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Object {
            "alignContent": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": 20,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 18,
              "width": "100%",
            }
          }
        >
          1exaAg2VJRQbyUBAeXcktChCAqjVP9TUxF3zo23R2T6EGdE
        </Text>
      </View>
    </View>
  </View>
</View>
`;
